testing the newly published geminiai maven depencency application for future and prod use

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,5 @@ spring.application.name=assistant
 
 
 
-google.gemini.api.key=${MY_GOOGLE_API_KEY}
-
-google.gemini.api.base-url=${MY_GOOGLE_BASE_URL}
+google.gemini.api.key=${GOOGLE_API_KEY}
+google.gemini.api.base-url=${GOOGLE_BASE_URL}
